--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button data-menu-button class="mobile-menu-close js-close-menu" type="button"
                 aria-label="Mobile menu close">
                 <svg class="close-menu-icon" width="24" height="24">
-                    <use class="menu-icon" xlink:href="./images/icons.svg#icon-close-menu"></use>
+                    <use class="menu-icon" xlink:href="./images/icons.svg#icon-close-black"></use>
                 </svg>
             </button>
             <nav class="mobile-navigation-section">
