--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/stylesDeck.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
@@ -235,7 +236,8 @@
                 <p class="social-media">Subscribe</p>
                 <form class="footer-form">
                     <label class="footer-label" for="footer-email">
-                        <input type="email" id="footer-email" name="footer-email" placeholder="E-mail" class="footer-email-input">
+                        <input type="email" id="footer-email" name="footer-email" placeholder="E-mail"
+                            class="footer-email-input">
                     </label>
                     <button type="submit" class="footer-button">Subscribe
                         <svg width="24" height="24" class="footer-tg-icon">
